--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "~4.11.1",
     "hjs": "~0.0.6",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
+    "serve-favicon": "~2.2.0",
+    "pg": "~4.2.0"
   },
   "engines": {
     "node": "0.10.x"
