--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "express": "~4.11.1",
-    "hjs": "~0.0.6",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
-    "pg": "~4.2.0",
-    "hogan-express": "~0.5.2"
+    "hogan-express": "~0.5.2",
+    "connect-mongo": "~0.7.0",
+    "mongoose": "~3.8.22",
+    "cookie-session": "~1.1.0",
+    "express-session": "~1.10.1",
+    "async": "~0.9.0"
   },
   "engines": {
     "node": "0.10.x"
