--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
     "start": "node web"
   },
   "dependencies": {
+    "async": "~0.9.0",
     "body-parser": "~1.10.2",
+    "connect-mongo": "~0.7.0",
     "cookie-parser": "~1.3.3",
+    "cookie-session": "~1.1.0",
     "debug": "~2.1.1",
     "express": "~4.11.1",
-    "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0",
-    "hogan-express": "~0.5.2",
-    "connect-mongo": "~0.7.0",
-    "mongoose": "~3.8.22",
-    "cookie-session": "~1.1.0",
     "express-session": "~1.10.1",
-    "async": "~0.9.0"
+    "hogan-express": "~0.5.2",
+    "mongoose": "~3.8.22",
+    "morgan": "~1.5.1",
+    "passport": "^0.2.1",
+    "passport-google": "^0.3.0",
+    "serve-favicon": "~2.2.0",
+    "util": "^0.10.3"
   },
   "engines": {
     "node": "0.10.x"
