--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongoose": "~3.8.22",
     "cookie-session": "~1.1.0",
     "express-session": "~1.10.1",
-    "async": "~0.9.0"
+    "async": "~0.9.0",
+    "mailgun": "~0.5.0"
   },
   "engines": {
     "node": "0.10.x"
