--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "async": "~0.9.0",
     "body-parser": "~1.10.2",
+    "bower": "^1.3.12",
     "connect-mongo": "~0.7.0",
     "cookie-parser": "~1.3.3",
     "cookie-session": "~1.1.0",
@@ -15,8 +16,8 @@
     "express": "~4.11.1",
     "express-session": "~1.10.1",
     "hogan-express": "~0.5.2",
-    "mongoose": "~3.8.22",
     "mailgun": "~0.5.0",
+    "mongoose": "~3.8.22",
     "morgan": "~1.5.1",
     "passport": "^0.2.1",
     "passport-google": "^0.3.0",
